--- a/index.html
+++ b/index.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Lista de Cursos de DevOps da Alura</title>
-</head>
-<body>
-    <h1>Cursos de DevOps</h1>
-    
-    <ul>
-        <li>Vagrant: Gerenciando máquinas virtuais</li>
-        <li>Docker: Criando containers sem dor de cabeça</li>
-        <li>Ansible: Sua infraestrutura como código</li>
-        <li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software</li>
-        <li>Kubernetes: Introdução a orquestração de containers</li>
-    </ul>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>ddsta de Cursos de DevOps da Alura</title>
+    </head>
+    <body>
+        <h1>Cursos de DevOps</h1>
+
+        <dl>
+            <dt>Vagrant</dt>
+            <dd>Gerenciando máquinas virtuais</dd>
+
+            <dt>Docker</dt>
+            <dd>Criando containers sem dor de cabeça</dd>
+
+            <dt>Ansible</dt>
+            <dd>Sua infraestrutura como código</dd>
+
+            <dt>Integração Contínua</dt>
+            <dd>Maturidade e Produtividade no Desenvolvimento de Software</dd>
+            
+            <dt>Kubernetes</dt>
+            <dd>Introdução a orquestração de containers</dd>
+        </dl>
+    </body>
 </html>
