Lista de cursos de redes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Lista de Cursos</title>
     </head>
     <body>
-        <h2>- Cursos de DevOps</h2>
+        <h2>Cursos de DevOps</h2>
 
         <dl>
             <dt>Vagrant</dt>
@@ -25,7 +25,7 @@
         </dl>
 
 
-        <h2>- Cursos de Linux:</h2>
+        <h2>Cursos de Linux:</h2>
         
         <dl>
             <dt>Linux I</dt>
@@ -41,7 +41,7 @@
             <dd>Fazendo monitoramento, agendando tarefas e backup</dd>
         </dl>
 
-        <h2>- Cursos de Cloud:</h2>
+        <h2>Cursos de Cloud:</h2>
 
         <dl>
             <dt>Amazon EC2</dt>
@@ -58,6 +58,17 @@
 
             <dt>Google Cloud</dt>
             <dd>Deploy de uma aplicação em Spring MVC</dd>
+        </dl>
+
+
+        <h2>Redes:</h2>
+
+        <dl>
+            <dt>Redes 1</dt>
+            <dd>Introdução, Conceitos e Prática</dd>
+
+            <dt>Redes 2</dt>
+            <dd>Montando um projeto do cliente até o provedor de serviços</dd>
         </dl>
     </body>
 </html>
